Introduce a new possible API option - hashDistance, which measures the distance between two hash values separated by a ; character
