# ds-image-analysis-swagger/src/main/swagger/ds-image-analysis.yml
@@ -22,7 +22,7 @@ paths:
             type: string
       responses:
         '200':
-          description: 'The returned value will be a string of a combination of the following values: The hash size ( 20, 42, 72, 110, 156, 210, 272), the precision of the DHash (Simple, double, triple) and finally the DHash value as a binary for the image'
+          description: 'The returned value will be a string of a combination of the following values: The hash size ( 20, 42, 72, 110, 156, 210, 272), the precision of the DHash (Simple, double, triple) and finally the DHash value as a BigInteger for the image'
           content:
             application/json:
               schema:
@@ -42,11 +42,31 @@ paths:
             type: string
       responses:
         '200':
-          description: 'The returned value will be a string of a combination of the following values: The hash size (16, 46, 64, 100, 144, 196, 256) and the PHash value as a binary for the image'
+          description: 'The returned value will be a string of a combination of the following values: The hash size (16, 46, 64, 100, 144, 196, 256) and the PHash value as a BigInteger for the image'
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/HashReply'
+  # Displays the distance between two hash values that are entered separated by a ;. URL like
+  # http://localhost:8080/ds-image-analysis/api/hashDistance/hashes/?hashes=1243121;32355232
+  /hashDistance/hashes:
+    get:
+      summary: 'Request the two hashvalues divided by a ;. Each hash value should be BigInteger'
+      operationId: getHashDistance
+      parameters:
+        - name: hashes
+          in: query
+          description: 'Hash valuees divided by a ;'
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: 'Difference between the two hash values (hamming distance)'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DistanceReply'
 components:
   schemas:
     HashReply:
@@ -56,4 +76,12 @@ components:
       properties:
         message:
           type: string
-          description: 'Binary hash value converted to a string from the API'
+          description: 'BigInteger hash value converted to a string from the API'
+    DistanceReply:
+      type: object
+      required:
+        - message
+      properties:
+        message:
+          type: string
+          description: 'The distance between the two hash values.'
